diss: paper sources

--- a/intro.tex
+++ b/intro.tex
@@ -16,21 +16,24 @@
 
 Sec.~\ref{sec:stat-inference}: parts of \cite{itip-statinf}
 
-Sec.~\ref{sec:bayes-inference}: parts of \cite{itip-statinf}
+Sec.~\ref{sec:bayes-inference} uses parts of \cite{itip-statinf},
+except Sec.~\ref{sec:diri-multi}, which is based on \cite{Walter2012b}.
 
-Sec.~\ref{sec:inferencetasks}: parts of \cite{itip-statinf}
+%Sec.~\ref{sec:inferencetasks}: parts of \cite{itip-statinf}
+%Sec.~\ref{sec:beta-binom}: parts of \cite{itip-statinf}
+%Sec.~\ref{sec:norm-norm}: parts of \cite{itip-statinf}
 
-Sec.~\ref{sec:beta-binom}: parts of \cite{itip-statinf}
 
-Sec.~\ref{sec:norm-norm}: parts of \cite{itip-statinf}
-
-Sec.~\ref{sec:diri-multi}: \cite{Walter2012b}
-
-Sec.~\ref{sec:commoncause}: parts of \cite{Troffaes2013a},
+Sec.~\ref{sec:commoncause} is based on parts of \cite{Troffaes2013a},
 where in particular Sec.~\ref{sec:basic-param-model} and Sec.~\ref{sec:alpha-factor-model}
 have been written primarily by Matthias Troffaes.
 
 %Sec.~\ref{sec:alpha-factor-prior}: parts of \cite{Troffaes2013a}
+
+Sec.~\ref{sec:ip-intro} was newly written for this thesis,
+except Sec.~\ref{sec:imprecisebayes}, which is based on \textcite[\S 8.4.2]{itip-statinf}.
+
+
 
 \section{Notation}
 \label{sec:notation}
