diss: paper sources

--- a/intro.tex
+++ b/intro.tex
@@ -112,8 +112,8 @@ describing the domain of the underlying probability measure, has to be specified
 In most applications there are straightforward canonical choices for $\sigma(\mathcal{X})$,
 and thus $\sigma$-fields are not explicitly discussed here.}
 collecting all probability distributions that are judged to be potential candidates for the distribution of $X$.
-In this setting $\mathcal{Q}$ is called \emph{sampling model} and every element $p\in \mathcal{Q}$ \emph{(potential) sampling distribution}.
-The inferential task is to learn the true element $p^* \in \mathcal{Q}$ from multiple observations of the random process producing $X$.
+In this setting $\mathcal{Q}$ is called \emph{sampling model} and every element $\p\in \mathcal{Q}$ \emph{(potential) sampling distribution}.
+The inferential task is to learn the true element $\p^* \in \mathcal{Q}$ from multiple observations of the random process producing $X$.
 
 
 \subsection{Parametric Models}
