diss: small edits of common cause section

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -1,4 +1,5 @@
 \chapter{Generalized Bayesian Inference with Sets of Priors}
+\label{cha:gbi}
 
 \begin{itemize}
 \item Short introduction to IP (sets of priors, lower/upper prevision/probability)
@@ -522,6 +523,7 @@ like possibilistic reasoning, fuzzy probabilities, etc.
 
 
 \section{***Motivations for IP}
+\label{sec:motivation}
 
 Although strictly negated by advocates of Bayesian methods \parencite[e.g., by][]{1987:lindley},
 the need to go beyond usual probability measures has been recognized for a long time,%
@@ -534,7 +536,7 @@ and in recent times most prominently by scientists involved in the development o
 \subsection{\pdc }
 
 \subsection{Weakly Informative Priors}
-
+\label{sec:motivation:near-ignorance}
 
 \subsection{Other Motives}
 
